# computer-systems-lab

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
cuda/matmul-optimizer/: .gitignore  CMakeLists.txt
cuda/matmul-optimizer/benchmarks/: bench.cu  results.csv
cuda/matmul-optimizer/docs/: optimization_notes.md  setup.md
cuda/matmul-optimizer/include/: bench.cuh  kernels.cuh
cuda/matmul-optimizer/rust/: Cargo.toml  build.rs
cuda/matmul-optimizer/rust/cuda/: cuda_bridge.cu
cuda/matmul-optimizer/rust/examples/: basic.rs  benchmark.rs
cuda/matmul-optimizer/rust/src/: error.rs  ffi.rs  lib.rs
cuda/matmul-optimizer/rust/tests/: correctness.rs  drop_test.rs
cuda/matmul-optimizer/scripts/: check_cuda_env.sh
cuda/matmul-optimizer/src/: kernel0_cpu.cpp  kernel1_naive.cu  kernel2_tiled.cu  kernel3_vectorized.cu  kernel4_coarsened.cu  kernel5_cublas.cu  main.cu
cuda/matmul-optimizer/tests/: correctness_test.cu
docs/: control-algorithm.md  firmware-history.md
examples/branches/: loop.s
examples/memory/: load_store.s
firmware/archive/: natcar_v1.3.ino  natcar_v1.6.ino
riscv/isa-simulator/: README.md
riscv/isa-simulator/examples/arithmetic/: addi.s
src/: alu.v  control_unit.v  data_memory.v  top.v
src/riscv_sim/: __init__.py  bits.py  cpu.py  decoder.py  encoder.py  errors.py  loader.py  main.py  memory.py  registers.py
tb/: data_memory_tb.v  top_tb.v
tests/: test_decoder.py  test_instructions.py  test_integration.py  test_memory.py  test_registers.py
tools/: build_examples.py
