[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "riscv-sim"
version = "0.1.0"
description = "A lightweight RV32I instruction set simulator for learning and experimentation."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

[project.scripts]
riscv-sim = "riscv_sim.main:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
